WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
323117
GPUDevice.createBindGroup fast path is broken for external textures
https://bugs.webkit.org/show_bug.cgi?id=323117
Summary
GPUDevice.createBindGroup fast path is broken for external textures
Mike Wyrzykowski
Reported
2026-09-01 10:46:17 PDT
GPUDevice.createBindGroup fast path is broken for external textures
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-09-01 10:46:25 PDT
<
rdar://problem/186379208
>
Mike Wyrzykowski
Comment 2
2026-09-01 10:50:47 PDT
The reason is GPUBindingResource now allows GPUBuffer, instead of just GPUBufferBinding, and we didn't add support for that case
Mike Wyrzykowski
Comment 3
2026-09-01 11:07:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/72954
EWS
Comment 4
2026-09-01 21:49:46 PDT
Committed
320309@main
(0ad38fbf95da): <
https://commits.webkit.org/320309@main
> Reviewed commits have been landed. Closing PR #72954 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug