GPUDevice.createBindGroup fast path is broken for external textures https://bugs.webkit.org/show_bug.cgi?id=323117 rdar://186379208

Reviewed by Dan Glastonbury.

GPUBuffer is now allowed in GPUBindingResource, but we always returned
false from the GPUBuffer path. This prevented bind group reuse for
external video textures.

Test: fast/webgpu/bind-group-reuse-with-buffer-entry.html

* LayoutTests/fast/webgpu/bind-group-reuse-with-buffer-entry-expected.txt: Added.
* LayoutTests/fast/webgpu/bind-group-reuse-with-buffer-entry.html: Added.
* Source/WebCore/Modules/WebGPU/GPUBindGroupEntry.h:
(WebCore::GPUBindGroupEntry::equal):

Canonical link: https://commits.webkit.org/320309@main